solved some issue and bugs
