# service/api/api-handler.go
@@ -19,7 +19,7 @@ func (rt *_router) Handler() http.Handler {
 	// Users routes
 	rt.router.GET("/users/", rt.wrap(rt.searchUsers))
 	rt.router.PUT("/users/:username/set_username", rt.wrap(rt.setMyUserName))
-	rt.router.GET("/users/:username/profile", rt.wrap(rt.getUserProfile))
+	rt.router.GET("/users/:username/profile/", rt.wrap(rt.getUserProfile))
 	rt.router.GET("/users/:username/stream", rt.wrap(rt.getMyStream))
 
 	// Bans routes
